--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,8 +1,7 @@
 {
   "functions": {
     "src/index.ts": {
-      "runtime": "nodejs22.x",
-      "handler": "index"
+      "runtime": "nodejs22.x"
     }
   }
 }
