--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev api/index.ts",
-    "start": "ts-node api/index.ts",
+    "dev": "IS_DEV_MODE=true ts-node-dev api/index.ts",
     "fetch-events": "ts-node prisma/fetch-events.ts",
     "init-db": "npx prisma db push && npx prisma generate && ts-node prisma/seed.ts"
   },
