--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "prisma-generate": "prisma db push && prisma generate",
     "dev": "IS_DEV_MODE=true ts-node-dev api/index.ts",
     "fetch-events": "ts-node prisma/fetch-events.ts",
-    "init-db": "prisma-generate && ts-node prisma/seed.ts"
+    "init-db": "npm run prisma-generate && ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^9.0.2",
